# -CS50web-

./: .gitignore  README.md  pyproject.toml
auctions/: admin.py  forms.py  logger.py  models.py  urls.py  views.py
auctions/management/commands/: create_default_categories.py  groups_policy.py
auctions/templates/auctions/: card_layout.html  categories.html  comments.html  create_listing.html  index.html  layout.html  listing.html  listing_layout.html  login.html  messages.html  nav_block.html  notifications.html  register.html  wishlist.html
commerce/: settings.py
encyclopedia/: my_forms.py  urls.py  util.py  views.py
encyclopedia/templates/encyclopedia/: create_edit_page.html  entry.html  error.html  index.html  layout.html  search_result.html
entries/: CS50.md  encyclopedia.md  new.md
mail/mail/migrations/: 0001_initial.py
mail/mail/static/mail/: inbox.js
network/project4/network/: form.py  forms.py  models.py  urls.py  views.py
network/project4/network/static/network/: api.js  index.js  userprofile.js
network/project4/network/templates/network/: index.html  layout.html  userprofile.html
