[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["la-strole <la-strole.sovaleto48@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
markdown2 = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
