[tool.poetry]
name = "mail"
version = "0.1.0"
description = "mail for CS50"
authors = ["la-strole <sovaleto48@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
